<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cocinapp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="logo">Logo</string>
    <string name="salchipapas">Salchipapas</string>
    <string name="menu">Menu</string>
    <string name="descripcion">Las salchipapas son un plato rápido y sencillo que combina papas fritas crujientes con salchichas doradas. Se preparan cortando y friendo las papas, y luego mezclándolas con rodajas de salchichas también fritas. Se sirven acompañadas de salsas como mayonesa, ketchup, y mostaza, y a veces se añaden otros ingredientes como huevo frito o queso rallado.</string>
    <string name="Volver">Volver</string>
    <string name="creado_por_rausch">creado por: Rausch</string>
    <string name="alarmas">Alarmas</string>
    <string name="_30min">30min</string>
    <string name="freir_papas">Freir papas</string>
    <string name="freir_salchichas">Freir salchichas</string>
    <string name="_20min">20min</string>
    <string name="compartir_receta">Compartir receta</string>
    <string name="a_cocinar">¡A cocinar!</string>
    <string name="inicia_la_primera_alarma_al_hacer_clic_en_iniciar_te_avisaremos_cuando_sea_el_momento_del_siguiente_paso" tools:ignore="Typos">Inicia la primera alarma al hacer clic en \'Iniciar\'. Te avisaremos cuando sea el momento del siguiente paso.</string>
    <string name="pausa_cuando_lo_necesites_con_el_bot_n_pausar_y_retoma_dando_clic_en_reanudar">Pausa cuando lo necesites con el botón \'Pausar\', y retoma dando clic en \'Reanudar\'.</string>
    <string name="para_avanzar_simplemente_da_clic_en_continuar_y_activaremos_la_siguiente_alarma">Para avanzar, simplemente da clic en \'Continuar\' y activaremos la siguiente alarma.</string>
    <string name="repite_hasta_llegar_al_final_de_la_receta_nosotros_te_acompa_amos_en_cada_paso">Repite hasta llegar al final de la receta. ¡Nosotros te acompañamos en cada paso!</string>
    <string name="iniciar">Iniciar</string>
    <string name="back">back</string>
    <string name="instruction">instruction</string>
    <string name="_1_2" tools:ignore="TypographyFractions">1/2</string>
    <string name="_00_25_00">00:25:00</string>
    <string name="reanudar">Reanudar</string>
    <string name="pausar">Pausar</string>
    <string name="_00_18_00">00:18:00</string>
    <string name="add">add</string>
    <string name="order">order</string>
    <string name="order2">order2</string>
    <string name="share">share</string>
    <string name="play">play</string>
    <string name="pausada">PAUSADA</string>
    <string name="pausar_btn">Pausar</string>
    <string name="pause">pause</string>
    <string name="continuar">Continuar</string>
    <string name="play_btn">play</string>
    <string name="timer">timer</string>
    <string name="volver_a_la_receta">volver a la receta</string>
    <string name="felicidades_has_terminado_la_receta_con_xito_buen_provecho">¡Felicidades! Has terminado la receta con éxito.\n¡Buen provecho!</string>
    <string name="agregar">Agregar</string>
    <string name="recuerda_seleccionar_un_nombre_y_descripci_n_clara_para_que_cuando_las_necesites_todo_sea_m_s_f_cil_de_entender_y_utilizar">¡Recuerda seleccionar un nombre y descripción clara para que, cuando las necesites, todo sea más fácil de entender  y utilizar!</string>
    <string name="nombre">Nombre</string>
    <string name="descripci_n">Descripción</string>
    <string name="copiar_url">Copiar url</string>
    <string name="dile_a_tu_amigo_cocinero_que_escanee_el_c_digo_qr_para_a_adir_la_receta">Dile a tu amigo cocinero que escanee el código QR para añadir la receta.</string>
    <string name="el_nombre_de_la_alarma_no_puede_ser_vac_o">El nombre de la alarma no puede ser vacío</string>
</resources>