<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    android:background="@color/background"
    tools:context=".EndRecipeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/secondary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageButton
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/menu"
                android:scaleType="fitCenter"
                android:src="@drawable/menu"
                android:layout_marginEnd="0dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/salchipapas"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_marginEnd="8dp"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:layout_marginTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/timer"
            android:layout_width="302dp"
            android:layout_height="410dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/timer"
            android:src="@drawable/chef"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.071" />

        <RelativeLayout
            android:id="@+id/finish_button"
            android:layout_width="190dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="36dp"
            android:background="@drawable/extended_fa"
            android:clipToOutline="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/icon_continue"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/play_btn"
                android:src="@drawable/starfull" />

            <TextView
                android:id="@+id/continue_text"
                android:layout_width="75dp"
                android:layout_height="21dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@+id/icon_continue"
                android:text="@string/volver_a_la_receta"
                android:textAlignment="textStart"
                android:textColor="@color/background"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/felicidades_has_terminado_la_receta_con_xito_buen_provecho"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
