<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    android:background="@color/background"
    tools:context=".AddAlarmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/secondary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageButton
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/menu"
                android:scaleType="fitCenter"
                android:src="@drawable/menu"
                android:layout_marginEnd="0dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/salchipapas"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_marginEnd="8dp"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/button_back"
            android:layout_width="90dp"
            android:layout_height="39dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/title_header"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/text_volver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/icon_back"
                android:text="@string/Volver"
                android:textColor="#E76F51" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/recuerda_seleccionar_un_nombre_y_descripci_n_clara_para_que_cuando_las_necesites_todo_sea_m_s_f_cil_de_entender_y_utilizar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_back"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="452dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="496dp"
            android:text="@string/nombre"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/el_nombre_de_la_alarma_no_puede_ser_vac_o"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextText2"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="332dp"
            android:layout_height="220dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="172dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="396dp"
            android:text="@string/descripci_n"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:id="@+id/continue_button"
            android:layout_width="169dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/extended_fa"
            android:clipToOutline="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextText3"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText3"
            app:layout_constraintVertical_bias="0.474">

            <TextView
                android:id="@+id/continue_text"
                android:layout_width="75dp"
                android:layout_height="21dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="47dp"
                android:layout_marginBottom="19dp"
                android:text="@string/agregar"
                android:textAlignment="textStart"
                android:textColor="@color/background"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
